# Prior-Authorisation-Assistant

./: .gitignore  README.md  pyproject.toml
data/: coverage.json  documents.json  medical_coverage_db.json  pa_requirements.json  pa_submissions.json  patients.json  policy_criteria.json  providers.json
data/appeal/: ReadMe.md
src/: __init__.py  hitl_task_poller.py  intake_scenarios.py  main.py  pa_status_poller.py
src/agent/: __init__.py  state.py  system_prompts.py  user_prompts_builder.py  workflow.py
src/agent/denial/: __init__.py  agent.py  state.py  system_prompts.py  user_prompts_builder.py
src/agent/requirement/: __init__.py  agent.py  state.py  system_prompts.py  user_prompts_builder.py
src/compliance/: __init__.py  audit_logger.py
src/integrations/: document_service.py  ehr_service.py  payer_service.py  provider.py
src/integrations/mock_data/: coverage.json  pa_requirements.json  patients.json  providers.json
src/models/: __init__.py  appeal.py  core.py  document.py  hitl.py  integration.py  tools.py  validation.py
src/tools/: __init__.py  document.py  ehr.py  medical_coverage_db.py  policy.py
tests/: __init__.py  conftest.py  test_models.py  test_pa_agent.py
